# fastertransformer_backend

./: CMakeLists.txt
.github/: CODEOWNERS
corvo-batcher/: CMakeLists.txt
corvo-batcher/cmake/: triton-isolated-batcher.cmake.in
corvo-batcher/src/: corvo_batcher.cc
docker/: Dockerfile
src/: libfastertransformer.cc
